# runtime-c

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  main.c
src/include/swamp-runtime/: allocator.h  blittable.h  clone.h  compact.h  context.h  debug.h  debug_variables.h  deserialize.h  dynamic_memory.h  execute.h  external.h  fixup.h  ledger.h  log.h  opcodes.h  panic.h  print.h  ref_count.h  serialize.h  stack_memory.h  static_memory.h  swamp.h  swamp_allocate.h  swamp_unpack.h  types.h
src/include/swamp-runtime/core/: array.h  bind.h  blob.h  char.h  core.h  debug.h  execute.h  int.h  list.h  map.h  math.h  maybe.h  reduce.h  string.h  transduce.h  types.h
src/lib/: allocator.c  compact.c  context.c  debug.c  debug_variables.c  deserialize.c  dynamic_memory.c  execute.c  fixup.c  is_blittable.c  ledger.c  print.c  serialize.c  stack_memory.c  static_memory.c  swamp.c  swamp_allocate.c  types.c  unpack.c
src/lib/core/: array.c  bind.c  blob.c  char.c  core.c  debug.c  execute.c  int.c  list.c  map.c  math.c  maybe.c  reduce.c  string.c  transduce.c
